third_party/move/tools/move-decompiler/tests/compiler-v2-test/visibility-checker/package_visibility.exp
module 0x42::A {
    friend fun bar() {
        ()
    }
    fun foo() {
        ()
    }
}

module 0x42::B {
    use 0x42::A;
    public fun bar() {
        A::bar();
    }
    friend fun foo() {
        A::bar();
    }
    fun baz() {
        A::bar();
    }
}

module 0x42::C {
    use 0x42::B;
    public fun bar() {
        B::foo();
    }
    friend fun foo() {
        B::foo();
    }
    fun baz() {
        B::foo();
    }
}

--- unable to recompile the decompiled code:
exiting with env checking errors
error: function `0x42::A::bar` cannot be called from function `0x42::B::bar` because module `0x42::B` is not a `friend` of `0x42::A`
   ┌─ package_visibility.move:2:16
   │
 2 │     friend fun bar() {
   │                ^^^ callee
   ·
13 │         A::bar();
   │         -------- called here

error: function `0x42::A::bar` cannot be called from function `0x42::B::foo` because module `0x42::B` is not a `friend` of `0x42::A`
   ┌─ package_visibility.move:2:16
   │
 2 │     friend fun bar() {
   │                ^^^ callee
   ·
16 │         A::bar();
   │         -------- called here

error: function `0x42::A::bar` cannot be called from function `0x42::B::baz` because module `0x42::B` is not a `friend` of `0x42::A`
   ┌─ package_visibility.move:2:16
   │
 2 │     friend fun bar() {
   │                ^^^ callee
   ·
19 │         A::bar();
   │         -------- called here

error: function `0x42::B::foo` cannot be called from function `0x42::C::bar` because module `0x42::C` is not a `friend` of `0x42::B`
   ┌─ package_visibility.move:15:16
   │
15 │     friend fun foo() {
   │                ^^^ callee
   ·
26 │         B::foo();
   │         -------- called here

error: function `0x42::B::foo` cannot be called from function `0x42::C::foo` because module `0x42::C` is not a `friend` of `0x42::B`
   ┌─ package_visibility.move:15:16
   │
15 │     friend fun foo() {
   │                ^^^ callee
   ·
29 │         B::foo();
   │         -------- called here

error: function `0x42::B::foo` cannot be called from function `0x42::C::baz` because module `0x42::C` is not a `friend` of `0x42::B`
   ┌─ package_visibility.move:15:16
   │
15 │     friend fun foo() {
   │                ^^^ callee
   ·
32 │         B::foo();
   │         -------- called here
